--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jest": "^26.6.3"
   },
   "dependencies": {
-    "blueimp-md5": "^2.18.0"
+    "blueimp-md5": "^2.18.0",
+    "rfdc": "^1.1.4"
   }
 }
